# FastAPI_v2

./: .gitignore  README.md  docker-compose-local.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_01_1328-12b508ecf119_add_name_colomn_to_user.py  971ed5556e1f_create_note_model.py  9cbfcb62eae6_create_user_model.py
src/: __init__.py
src/core/: __init__.py  config.py  db.py  models.py  urls.py
src/note/: dals.py  models.py  schemas.py  services.py
src/note/GraphQL/: __init__.py  mutation.py  query.py
src/note/REST/: __init__.py  views.py
src/user/: dals.py  mixins.py  models.py  schemas.py  services.py
src/user/GraphQL/: __init__.py  mutation.py  query.py
src/user/REST/: __init__.py  views.py
var/: .env.dev.sample
